<resources>
    <string name="app_name">Sharido</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_users">Users</string>
    <string name="menu_create_communities">Create Community</string>
    <string name="menu_communities">Communities</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_yourCommunities">Your Communities</string>
    <string name="menu_community_categories"> Community Categories </string>



    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="sign_in_google">Sign In with Google</string>
    <string name="sign_in_email">Sign In with Email</string>
    <string name="sign_in_phone">Sign In with Phone</string>

    <string name="create_community"> Create Community </string>
    <string name="create_post"> Create Post </string>

    <string name="welcome"> Welcome Back </string>
    <string name="create_post_menu_button"> Create a Post </string>
    <string name="communities_menu_button"> Communities </string>
    <string name="your_posts_menu_button"> Your Posts </string>
    <string name="users_menu_button_text"> Users </string>
    <string name="all_posts_menu_button_text"> All Posts </string>
    <string name="messageLoading"> Loading </string>


    <string name="community_spinner_text"> Choose a Category </string>

    <string-array name="categories">
        <item>Art</item>
        <item>Automobiles</item>
        <item>Baking</item>
        <item>Books</item>
        <item>Cooking</item>
        <item>Cosplaying</item>
        <item>Crafts</item>
        <item>Driving</item>
        <item>Fashion</item>
        <item>Film</item>
        <item>Gaming</item>
        <item>General Advice</item>
        <item>Graphic Design</item>
        <item>Hacking</item>
        <item>Motorcycles</item>
    </string-array>
</resources>