<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_users"
            android:title="@string/menu_users" />
        <item
            android:id="@+id/nav_create_community"
            android:icon="@drawable/ic_create_community"
            android:title="@string/menu_create_communities" />
        <item
            android:id="@+id/nav_communities"
            android:icon="@drawable/ic_communities"
            android:title="@string/menu_communities" />
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/menu_sign_out" />
    </group>


</menu>