<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ie.conorcasey.sharido.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_users"
        android:name="ie.conorcasey.sharido.ui.users.UsersFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/nav_create_community"
        android:name="ie.conorcasey.sharido.ui.CreateCommunity.CreateCommunityFragment"
        android:label="@string/menu_create_communities"
        tools:layout="@layout/fragment_create_community" />

    <fragment
        android:id="@+id/nav_communities"
        android:name="ie.conorcasey.sharido.ui.communities.CommunitiesFragment"
        android:label="@string/menu_communities"
        tools:layout="@layout/fragment_communities" />
    <fragment
        android:id="@+id/nav_yourCommunities"
        android:name="ie.conorcasey.sharido.ui.yourCommunities.YourCommunitiesFragment"
        android:label="@string/menu_yourCommunities"
        tools:layout="@layout/fragment_communities" />

</navigation>