<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/material_on_background_disabled">


        <ImageView
            android:id="@+id/icon"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:paddingTop="95dp"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@mipmap/ic_launcher_foreground"
            app:srcCompat="@mipmap/ic_launcher_foreground"
            tools:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingTop="30dp"
            android:text="@string/emailpassword_title_text"
            android:textColor="@color/black"
            android:theme="@style/ThemeOverlay.MyTitleText" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/emailButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/emailSignInButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/fui_idp_button_background_email"
                android:drawableStart="@android:drawable/sym_action_email"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:paddingRight="35dp"
                android:singleLine="true"
                android:text="@string/sign_in_email"
                android:textAlignment="center"
                android:textAllCaps="false"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phoneButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailButton"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/phoneSignInButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/fui_idp_button_background_phone"
                android:drawableStart="@drawable/fui_ic_phone_white_24dp"
                android:gravity="center_vertical"
                android:text="@string/sign_in_phone"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:paddingLeft="30dip"
                android:paddingRight="26dip"
                android:singleLine="true"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/googleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneButton"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/googleSignInButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:drawableStart="@drawable/fui_ic_googleg_color_24dp"
                android:gravity="center_vertical"
                android:text="@string/sign_in_google"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:paddingLeft="30dip"
                android:paddingRight="26dip"
                android:singleLine="true"
                tools:ignore="RtlCompat" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>